--- a/stablediffusion_webui_goole-colab.ipynb
+++ b/stablediffusion_webui_goole-colab.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git"
+    "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git\n",
+    "%cd /content/stable-diffusion-webui\n",
+    "%echo '' > requirements.txt"
    ]
   }
  ],
