--- a/stablediffusion_webui_goole-colab.ipynb
+++ b/stablediffusion_webui_goole-colab.ipynb
@@ -8,7 +8,15 @@
    "source": [
     "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git\n",
     "%cd /content/stable-diffusion-webui\n",
-    "%echo '' > requirements.txt"
+    "!rm -r requirements.txt\n",
+    "!apt-get -y install -qq aria2\n",
+    "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://raw.githubusercontent.com/Kimyobu/MyStableDiffusionWebUI/main/requirements.txt\n",
+    "!pip install --upgrade fastapi\n",
+    "!apt install libcairo2-dev pkg-config python3-dev\n",
+    "!pip install svglib\n",
+    "!pip install torchmetrics==0.11.0\n",
+    "# Web UI tunnel\n",
+    "!COMMANDLINE_ARGS=\"--share --no-half-vae --xformers --enable-insecure-extension- --theme dark --gradio-queue\" REQS_FILE=\"requirements.txt\" python launch.py"
    ]
   }
  ],
